trying to fix bottom stuff on safari

--- a/css/style.css
+++ b/css/style.css
@@ -1393,9 +1393,8 @@ input.colorPicker#textPicker {
 }
 
 @media screen and (max-width: 550px), (max-height: 667px), (max-width: 667px), (max-height: 550px){
-    _::-webkit-full-page-media, .body:future, :root .body {
-        padding-top: 0px;
-        padding-bottom: 65px;
+    .welcome, .login, .main, .login{
+        padding-bottom: env(safe-area-inset-bottom);
     }
 
     .welcomeBox{
